# collective.translators

./: .meta.toml  .mrbob.ini  CHANGES.md  CONTRIBUTORS.md  LICENSE.md  MANIFEST.in  README.md  instance.yaml  mx.ini  setup.cfg  setup.py  tox.ini
.github/workflows/: meta.yml
scripts/: create_site.py
src/collective/translators/: __init__.py  configure.zcml  interfaces.py  permissions.zcml  profiles.zcml  testing.py
src/collective/translators/amazon/: configure.zcml  utility.py
src/collective/translators/aws/: configure.zcml  controlpanel.py  utility.py
src/collective/translators/controlpanel/: configure.zcml  controlpanel.py
src/collective/translators/deepl/: configure.zcml  controlpanel.py  utility.py
src/collective/translators/deepseek/: configure.zcml  controlpanel.py  utility.py
src/collective/translators/libretranslate/: configure.zcml  controlpanel.py  utility.py
src/collective/translators/locales/: collective.translators.pot
src/collective/translators/locales/en/LC_MESSAGES/: collective.translators.po
src/collective/translators/locales/it/LC_MESSAGES/: collective.translators.po
src/collective/translators/ollama/: configure.zcml  controlpanel.py  utility.py
src/collective/translators/profiles/default/: browserlayer.xml  controlpanel.xml
src/collective/translators/profiles/default/registry/: aws.xml  deepl.xml  deepseek.xml  libretranslate.xml  main.xml  ollama.xml
src/collective/translators/profiles/uninstall/: browserlayer.xml
src/collective/translators/serializers/: configure.zcml
src/collective/translators/setuphandlers/: __init__.py
src/collective/translators/upgrades/: configure.zcml
tests/: conftest.py
tests/setup/: test_setup_install.py  test_setup_uninstall.py
