[metadata]
name = collective.translators
version = 1.0.0a0
description = Pluggable external translation utilities for Plone
long_description = file: README.md
long_description_content_type = text/markdown
author = Mauro Amico
author_email = mauro.amico@gmail.com
url = https://github.com/collective/collective.translators
project_urls =
    PyPI = https://pypi.org/project/collective.translators
    Source = https://github.com/collective/collective.translators
    Tracker = https://github.com/collective/collective.translators/issues
license = GPL version 2
keywords = Python Plone CMS
classifiers =
    Development Status :: 4 - Beta
    Environment :: Web Environment
    Framework :: Plone
    Framework :: Plone :: Addon
    Framework :: Plone :: 6.0
    Programming Language :: Python
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Operating System :: OS Independent
    License :: OSI Approved :: GNU General Public License v2 (GPLv2)

[options]
python_requires = >=3.8
packages = find:
namespace_packages = collective
package_dir =
    =src
include_package_data = true
zip_safe = false
install_requires =
    setuptools
    Products.CMFPlone
    plone.api
    plone.restapi
    plone.volto
    requests
    ollama
    deepl
    boto3
    openai

[options.extras_require]
test =
    zest.releaser[recommended]
    zestreleaser.towncrier
    plone.app.testing
    plone.restapi[test]
    plone.app.contenttypes[test]
    # pytest
    # pytest-cov
    # pytest-plone>=0.5.0
libretranslate =

[options.packages.find]
where = src
exclude = ez_setup

[options.entry_points]
z3c.autoinclude.plugin =
    target = plone
